<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/to"
        android:textSize="20sp"
        android:textColor="#000000"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/subject"
        android:textSize="20sp"
        android:textColor="#000000"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"

        android:autofillHints=""
        android:hint="@string/message"
        android:textSize="20sp"
        android:textColor="#000000"
        android:inputType="textPersonName"/>

    <Button
        android:layout_width="100dp"
        android:layout_gravity="end"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:id="@+id/button"
        android:layout_marginTop="10dp" />

</LinearLayout>
